--- a/app/src/main/res/layout/activity_add_items.xml
+++ b/app/src/main/res/layout/activity_add_items.xml
@@ -135,6 +135,7 @@
 
 
                     <LinearLayout
+                        android:id="@+id/btn_select_catagory"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
