--- a/app/src/main/res/layout/activity_client.xml
+++ b/app/src/main/res/layout/activity_client.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
@@ -9,25 +8,32 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/main"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ItemsFragment">
+        tools:context=".Client">
+
+
+        <include
+            layout="@layout/appbar"
+            android:id="@+id/mainheader"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <LinearLayout
 
-            android:id="@+id/headerLayout"
+            android:id="@+id/headerLayout1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:background="@drawable/rounded_box_outline"
             android:backgroundTint="@color/buttoncolor"
-            android:elevation="4dp"
             android:orientation="horizontal"
             android:padding="2dp"
-            android:radius="16dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toBottomOf="@+id/mainheader">
 
 
             <LinearLayout
@@ -101,7 +107,7 @@
             app:layout_constraintBottom_toTopOf="@+id/btn_addnew"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/headerLayout">
+            app:layout_constraintTop_toBottomOf="@+id/headerLayout1">
 
 
             <ImageView
@@ -111,7 +117,6 @@
                 android:layout_marginBottom="100dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@drawable/empty_box" />
@@ -121,7 +126,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="32dp"
-                android:text="No item avaliable"
+                android:text="No Client avaliable"
                 android:textColor="@color/imp_text_color"
                 android:textSize="12sp"
                 android:textStyle="bold"
@@ -134,7 +139,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:text="Tab “add new item” to add items"
+                android:text="Tab “add new Client” to add client"
                 android:textColor="#777777"
                 app:layout_constraintEnd_toEndOf="@+id/noitem"
                 app:layout_constraintStart_toStartOf="@+id/noitem"
@@ -155,9 +160,8 @@
             android:gravity="start"
             app:layout_constraintStart_toStartOf="parent"
             android:padding="10dp"
-            app:layout_constraintTop_toBottomOf="@+id/headerLayout"
-            app:layout_constraintBottom_toTopOf="@+id/btn_addnew"
-            >
+            app:layout_constraintTop_toBottomOf="@+id/headerLayout1"
+            app:layout_constraintBottom_toTopOf="@+id/btn_addnew">
 
             <androidx.recyclerview.widget.RecyclerView
                 android:layout_width="match_parent"
@@ -180,13 +184,13 @@
             android:paddingStart="20dp"
             android:paddingEnd="5dp"
             android:background="@drawable/bg_addnew"
-            android:text="Add New Items"
+            android:text="Add New CLIENT"
             android:textColor="#FFFFFF"
             android:layout_marginBottom="25dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            />
+            app:layout_constraintBottom_toBottomOf="parent" />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
