--- a/app/src/main/res/layout/recent_invoice_layout.xml
+++ b/app/src/main/res/layout/recent_invoice_layout.xml
@@ -8,7 +8,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="80dp"
-        android:background="@drawable/rounded_box_outline"
+        android:background="@drawable/rounded_box_outline_edt"
         android:padding="11dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -80,7 +80,7 @@
                 android:layout_marginStart="5dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/share"
+                android:src="@drawable/share_xml"
                 />
             <ImageView
                 android:id="@+id/img_more"
